--- a/WebContent/it/dovesiamo.html
+++ b/WebContent/it/dovesiamo.html
@@ -101,7 +101,7 @@
     }
     
  </script>
-				<img  id="imgMetro" src="../media/img/modified/metropolitana.jpg"
+				<img id="imgMetro" src="../media/img/modified/metropolitana.jpg"
 					onclick="changeImage()" />
 			</aside>
 
@@ -112,9 +112,8 @@
 					della Metropolitana Affori Centro (Linea M3 Gialla)
 				</p>
 
-				<iframe 
-					src="https://www.youtube.com/embed/UkBmUJnpfzo" frameborder="0"
-					allowfullscreen></iframe>
+				<iframe src="https://www.youtube.com/embed/UkBmUJnpfzo"
+					frameborder="0" allowfullscreen></iframe>
 				</iframe>
 			</aside>
 
@@ -122,55 +121,85 @@
 
 				<p>Siamo a tre minuti a piedi dalla fermata della Metropolitana
 					Affori Centro (Linea M3 Gialla), in via Bernardo Da Canal 24.</p>
-				<br><p>
-					<b>Come raggiungerci in aereo:</b><br><br>
-					<em>Da Malpensa</em> ci sono tre possibilità:<br>
- bus "shuttle" fino alla Stazione Centrale FS e metropolitana linea3Gialla (5 fermate, direzione Comasina), scendere ad Affori Centro.<br>
- treno Malpensa express fino alla Stazione Cadorna FNM, quindi metropolitana linea1Rossa fino a “Duomo” e infine linea3Gialla in direzione Comasina, scendere ad Affori Centro.<br>
-treno Malpensa express fino alla Stazione Bovisa FNM, quindi treno linee S2 e S4 del servizio ferroviario suburbano e dalla linea regionale per Asso di Trenord (fermata Stazione FNM Affori)<br>
 				<br>
-				<em>Da Linate</em> ci sono due possibilità<br>
-bus "shuttle" fino alla Stazione Centrale FS e metropolitana linea M3 Gialla (5 fermate, direzione Comasina), scendere ad Affori Centro.<br>
-autobus 73 fino al capolinea “San Babila” e poi (sempre che non si preferisca passeggiare lungo il corso Vittorio Emanuele!), metropolitana linea1Rossa fino a “Duomo” e infine linea3Gialla in direzione Comasina, fermata Affori Centro<br><br>
-				<em>Da Orio al Serio (BG)</em> bus "shuttle" fino alla Stazione Centrale FS e metropolitana linea3Gialla (5 fermate, direzione Comasina), scendere a Affori Centro.<br>
+				<p>
+					<b>Come raggiungerci in aereo:</b><br>
+					<br> <em>Da Malpensa</em> ci sono tre possibilità:
+				</p>
+				<ol>
+					<li>bus "shuttle" fino alla Stazione Centrale FS e
+						metropolitana linea3Gialla (5 fermate, direzione Comasina),
+						scendere ad Affori Centro.</li>
+					<li>treno Malpensa express fino alla Stazione Cadorna FNM,
+						quindi metropolitana linea1Rossa fino a “Duomo” e infine
+						linea3Gialla in direzione Comasina, scendere ad Affori Centro.</li>
+					<li>treno Malpensa express fino alla Stazione Bovisa FNM,
+						quindi treno linee S2 e S4 del servizio ferroviario suburbano e
+						dalla linea regionale per Asso di Trenord (fermata Stazione FNM
+						Affori).</li>
+				</ol>
+				<br>
+				<p>
+					<em>Da Linate</em> ci sono due possibilità:<br>
+				</p>
+				<ol>
+					<li>bus "shuttle" fino alla Stazione Centrale FS e
+						metropolitana linea M3 Gialla (5 fermate, direzione Comasina),
+						scendere ad Affori Centro.</li>
+					<li>autobus 73 fino al capolinea “San Babila” e poi (sempre
+						che non si preferisca passeggiare lungo il corso Vittorio
+						Emanuele!), metropolitana linea1Rossa fino a “Duomo” e infine
+						linea3Gialla in direzione Comasina, fermata Affori Centro.</li>
+				</ol>
+
+				<br>
+				<p>
+					<em>Da Orio al Serio (BG): </em> bus "shuttle" fino alla Stazione
+					Centrale FS e metropolitana linea3Gialla (5 fermate, direzione
+					Comasina), scendere a Affori Centro.<br>
 				</p>
 				<p>
-					<br><b>Come raggiungerci in Treno:</b> <br><br>
-					<em>Da stazione Centrale Milano: </em> 
-					 metropolitana linea M3 Gialla fermata “Affori Centro” (5 fermate, direzione Comasina)<br><br> 
-					<em>Da stazione Porta Garibaldi</em> ci sono due
-					possibilità:<br> metropolitana linea2Verde fino a “Centrale FS” (2
-					fermate, direzione Cologno) e poi linea M3 Gialla fermata “Affori
-					Centro” (5 fermate, direzione Comasina) <br> autobus n° 70 (fermata in
-					Via Farini – Via Ferrari, direzione Biancamano – Cim. Bruzzano) per
-					10 fermate e scendi alla fermata di Via P. Rossi – Via Armellini
-					(200mt a piedi dal B&amp;B da Canal)
-					<br><br><em>Da stazione FNM Cadorna</em> ci sono
-					due possibilità<br> metropolitana linea1Rossa fino a “Duomo” (3
-					fermate, direzione Sesto) e poi linea M3 Gialla fermata “Affori
-					Centro” (9 fermate, direzione Comasina)<br> linee S2 e S4 del servizio
-					ferroviario suburbano e dalla linea regionale per Asso di Trenord
-					fermata “Stazione FNM Affori”<br><br>
-					<em>Da stazione Rogoredo FS:</em>
-					metropolitana linea M3 Gialla (direzione Comasina) per 17 fermate fino
-					a “Affori Centro”
-					<br>
-						</p>
-<p>					<b>Come raggiungerci in Auto:</b> Siamo al di fuori
-					dell’Area C, la zona a traffico limitato (ZTL) corrispondente alla
-					Cerchia dei Bastioni (circonvallazione interna) per la quale è
-					previsto un ticket di ingresso. - da Venezia: imbocca l’autostrada
-					A4 direzione Milano, superata la barriera di Milano est e prosegui
-					sino all’uscita di Cormano. - da Genova: percorri l’autostrada A7
+					<br><b>Come raggiungerci in Treno:</b>
+ <br><br>	
+					 <em>Da stazione Centrale Milano: </em> metropolitana
+					linea M3 Gialla fermata “Affori Centro” (5 fermate, direzione
+					Comasina)<br></p>
+<p>					<br> <em>Da stazione Porta Garibaldi</em> ci sono due
+					possibilità:</p>
+					<ol><li> metropolitana linea2Verde fino a “Centrale
+					FS” (2 fermate, direzione Cologno) e poi linea M3 Gialla fermata
+					“Affori Centro” (5 fermate, direzione Comasina) </li><li> autobus
+					n° 70 (fermata in Via Farini – Via Ferrari, direzione Biancamano –
+					Cim. Bruzzano) per 10 fermate e scendi alla fermata di Via P. Rossi
+					– Via Armellini (200mt a piedi dal B&amp;B da Canal) </li>
+					</ol><br> 
+					<p><em>Da stazione FNM Cadorna</em> ci sono due possibilità:</p>
+					<ol><li> metropolitana linea1Rossa fino a “Duomo” (3 fermate, direzione
+					Sesto) e poi linea M3 Gialla fermata “Affori Centro” (9 fermate,
+					direzione Comasina)</li> <li>  linee S2 e S4 del servizio ferroviario
+					suburbano e dalla linea regionale per Asso di Trenord fermata
+					“Stazione FNM Affori”</li></ol>
+					<p> <em>Da stazione Rogoredo FS:</em> metropolitana linea M3
+					Gialla (direzione Comasina) per 17 fermate fino a “Affori Centro”.</p>
+				<p><br> 
+					<b>Come raggiungerci in Auto:</b> Siamo al di fuori dell’Area C, la
+					zona a traffico limitato (ZTL) corrispondente alla Cerchia dei
+					Bastioni (circonvallazione interna) per la quale è previsto un
+					ticket di ingresso.
+					<br><br> <em>da Venezia:</em> imbocca l’autostrada A4 direzione
+					Milano, superata la barriera di Milano est e prosegui sino
+					all’uscita di Cormano. - da Genova: percorri l’autostrada A7
 					direzione Milano, giunto alla barriera di Milano ovest prosegui in
 					direzione Tangenziale ovest – Torino, arrivato al bivio segui la
-					direzione Venezia sino all’uscita di Cormano. - da Bologna:
+					direzione Venezia sino all’uscita di Cormano. - 
+					<br><br> <em>da Bologna:</em>
 					risalendo l’autostrada A1 direzione Milano arrivi alla barriera di
 					Milano sud, prosegui in Tangenziale est direzione Venezia, superata
 					l’uscita di Cascina Gobba imbocca sulla destra la Tangenziale A52
 					direzione Torino – Como. Oltrepassato il casello immettersi sulla
 					destra sempre in direzione Torino e prosegui sino all’uscita
-					Cormano. - da Aeroporto Milano “Malpensa”: prendi la A8 con
+					Cormano. 
+					<br><br> <em>da Aeroporto Milano “Malpensa”:</em> prendi la A8 con
 					direzione Milano e successivamente la A4 direzione Venezia, uscendo
 					allo svincolo di Cormano.
 				</p>
@@ -182,26 +211,26 @@ autobus 73 fino al capolinea “San Babila” e poi (sempre che non si preferisc
 			<a
 				href="https://www.google.it/maps/place/Via+Privata+Bernardo+da+Canal,+24,+20161+Milano/@45.5141936,9.1710628,17z/data=!3m1!4b1!4m2!3m1!1s0x4786c0eb7f4ac60d:0x48789106df250089">Guarda
 				la cartina dettagliata su Google Maps</a>
-
-
 		</section>
-
-
 
 	</article>
 
 	<footer>
-		<div><p class="contact">
-				<strong>Da Canal B&amp;B</strong><em> - </em><span>Via Bernardo da
-					Canal, 24 - 20161 Milano (MI) ITALIA</span><br /> <span>Email: <a
-					href="mailto:info@dacanalbnb.com">info@dacanalbnb.com</a></span><em> - </em><span>Cellulare:
-					<a href="tel:+39.347.0652204">+39.347.0652204</a>
+		<div>
+			<p class="contact">
+				<strong>Da Canal B&amp;B</strong><em> - </em><span>Via
+					Bernardo da Canal, 24 - 20161 Milano (MI) ITALIA</span><br /> <span>Email:
+					<a href="mailto:info@dacanalbnb.com">info@dacanalbnb.com</a>
+				</span><em> - </em><span>Cellulare: <a href="tel:+39.347.0652204">+39.347.0652204</a>
 				</span>
 			</p>
 			<p class="socials">
-				<a href="https://www.facebook.com/pages/Da-Canal-Bed-Breakfast/627093367418165" class="facebook">Facebook</a>
-				<a href="https://twitter.com/DaCanalBnB" class="twitter">Twitter</a>
-				<a href="https://plus.google.com/u/0/111037845761365067591" class="googleplus"></a>
+				<a
+					href="https://www.facebook.com/pages/Da-Canal-Bed-Breakfast/627093367418165"
+					class="facebook">Facebook</a> <a
+					href="https://twitter.com/DaCanalBnB" class="twitter">Twitter</a> <a
+					href="https://plus.google.com/u/0/111037845761365067591"
+					class="googleplus"></a>
 			</p>
 		</div>
 	</footer>
