--- a/WebContent/it/contatti.html
+++ b/WebContent/it/contatti.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-<title>Contatti - Bed & Breakfast Milano</title>
+<title>Contatti - Da Canal - Bed & Breakfast a Milano</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
@@ -45,7 +45,8 @@
 
 	<header>
 		<div>
-			<a id="logo" href="index.html">Da Canal - Bed & Breakfast a Milano</a>
+			<a id="logo" href="index.html">Da Canal - Bed & Breakfast a
+				Milano</a>
 
 			<nav id="menu" class="contatti">
 				<span class="toggler"><span class="togglerText">menu</span></span>
@@ -82,81 +83,47 @@
 			<hgroup>
 				<h1>Contatti</h1>
 			</hgroup>
-			<aside>
-
-
-				<script>
- 	/* switch between metro pics*/
-    function changeImage() 
-    {
-		if(  document.getElementById("imgMetro").src.substr(-1) === "g" )
-        { 
-            document.getElementById("imgMetro").src = "../media/img/modified/metro-grande.gif";
-        }
-        else 
-        {
-            document.getElementById("imgMetro").src = "../media/img/modified/metropolitana.jpg";
-        }
-    }
-    
- </script>
-				<img id="imgMetro" src="../media/img/modified/metropolitana.jpg"
-					onclick="changeImage()" />
-			</aside>
 			<section>
-
-				<p>?????? si trova a due minuti a piedi dalla fermata della
-					Metropolitana Affori Centro (Linea Gialla)</p>
 				<p>Potete contattarci ai seguenti indirizzi:</p>
 				<ul>
 					<li><span>Indirizzo:</span><strong><a
 							href="https://www.google.it/maps/place/Via+Privata+Bernardo+da+Canal,+24,+20161+Milano/@45.5141936,9.1710628,17z/data=!3m1!4b1!4m2!3m1!1s0x4786c0eb7f4ac60d:0x48789106df250089">Via
 								Bernardo da Canal, 24<br />20161 Milano (MI) - ITALIA</strong></a></li>
 					<li><span>Email:</span><strong><a
-							href="mailto:info@?????.it">info@????.it</a></strong></li>
+							href="mailto:info@?????.it">info@dacanalbnb.com</a></strong></li>
 					<li><span>Cellulare:</span><strong><a
 							href="tel:+39.347.0652204">+39.347.0652204</a></strong></li>
 
 				</ul>
 			</section>
 
-			<div id="gwrap">
-				<div id="gmap"></div>
-			</div>
-			<a
-				href="https://www.google.it/maps/place/Via+Privata+Bernardo+da+Canal,+24,+20161+Milano/@45.5141936,9.1710628,17z/data=!3m1!4b1!4m2!3m1!1s0x4786c0eb7f4ac60d:0x48789106df250089">Guarda
-				la cartina dettagliata su Google Maps</a>
-
-			<section>
-				<aside>
-					<iframe width="100%" src="http://www.youtube.com/embed/XGSy3_Czz8k">
-					</iframe>
-				</aside>
-				<section>
-
-					<p>Guarda il video del percorso partendo dalla fermata della
-						Metropolitana Affori Centro (Linea Gialla)</p>
-				</section>
-			</section>
+			<form action="MAILTO:angelo.schiavone@gmail.com" method="post"
+				enctype="text/plain">
+				Namess :<br> <input type="text" name="name" value="your name"><br>
+				E-mail:<br> <input type="text" name="mail" value="your email"><br>
+				Comment:<br> <input type="text" name="comment" value="your comment" size="50"><br>
+				<br> <input type="submit" value="Send"> <input type="reset" value="Reset">
+			</form>
 
 		</section>
-
-
-
 	</article>
 
 	<footer>
-		<div><p class="contact">
-				<strong>Da Canal B&amp;B</strong><em> - </em><span>Via Bernardo da
-					Canal, 24 - 20161 Milano (MI) ITALIA</span><br /> <span>Email: <a
-					href="mailto:info@dacanalbnb.com">info@dacanalbnb.com</a></span><em> - </em><span>Cellulare:
-					<a href="tel:+39.347.0652204">+39.347.0652204</a>
+		<div>
+			<p class="contact">
+				<strong>Da Canal B&amp;B</strong><em> - </em><span>Via
+					Bernardo da Canal, 24 - 20161 Milano (MI) ITALIA</span><br /> <span>Email:
+					<a href="mailto:info@dacanalbnb.com">info@dacanalbnb.com</a>
+				</span><em> - </em><span>Cellulare: <a href="tel:+39.347.0652204">+39.347.0652204</a>
 				</span>
 			</p>
 			<p class="socials">
-				<a href="https://www.facebook.com/pages/Da-Canal-Bed-Breakfast/627093367418165" class="facebook">Facebook</a>
-				<a href="https://twitter.com/DaCanalBnB" class="twitter">Twitter</a>
-				<a href="https://plus.google.com/u/0/111037845761365067591" class="googleplus"></a>
+				<a
+					href="https://www.facebook.com/pages/Da-Canal-Bed-Breakfast/627093367418165"
+					class="facebook">Facebook</a> <a
+					href="https://twitter.com/DaCanalBnB" class="twitter">Twitter</a> <a
+					href="https://plus.google.com/u/0/111037845761365067591"
+					class="googleplus"></a>
 			</p>
 		</div>
 	</footer>
