--- a/WebContent/it/dovesiamo.html
+++ b/WebContent/it/dovesiamo.html
@@ -83,9 +83,10 @@
 			<hgroup>
 				<h1>Come raggiungerci</h1>
 			</hgroup>
+			
+			
+			
 			<aside>
-
-
 				<script>
  	/* switch between metro pics*/
     function changeImage() 
@@ -108,7 +109,7 @@
 
 			<aside>
 				<p>
-					Guarda il video del percorso a piedi partendo dalla<br>fermata
+					Guarda il video del percorso a piedi partendo dalla fermata
 					della Metropolitana Affori Centro (Linea M3 Gialla)
 				</p>
 
