--- a/WebContent/en/index.html
+++ b/WebContent/en/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="full">
 <head>
-<title>Welcome - Bed & Breakfast a Milano</title>
+<title>Da Canal - Bed & Breakfast in Milan</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <!-- <meta name="viewport" content="width=device-width"> -->
@@ -48,9 +48,9 @@
 					<li class="camere2"><a href="camere.html"><span>rooms</span></a></li>
 					<li class="servizi2"><a href="servizi.html"><span>services</span></a></li>
 					<li class="prezzi2"><a href="prezzi.html"><span>prices</span></a></li>
+					<li class="dovesiamo2"><a href="dovesiamo.html"><span>where we are</span></a></li>
 					<li class="contatti2"><a href="contatti.html"><span>contacts</span></a></li>
-				</ul>
-			</nav>
+				</ul>		</nav>
 
 			<nav id="lang2">
 				<ul>
@@ -74,10 +74,10 @@
 		<aside>
 			<div>
 				<p id="txt1">
-					Welcome to B<em class="amp">&</em>B
+					Da Canal - Bed&amp;Breakfast Milan
 				</p>
 				<p id="txt2">
-					<span>in Milan.</span>
+					<span>tutta un'altra casa</span>
 				</p>
 			</div>
 		</aside>
