--- a/WebContent/it/dovesiamo.html
+++ b/WebContent/it/dovesiamo.html
@@ -178,7 +178,7 @@
 					Sesto) e poi linea M3 Gialla fermata “Affori Centro” (9 fermate,
 					direzione Comasina)</li> <li>  linee S2 e S4 del servizio ferroviario
 					suburbano e dalla linea regionale per Asso di Trenord fermata
-					“Stazione FNM Affori”</li></ol>
+					“Stazione FNM Affori”.</li></ol><br>
 					<p> <em>Da stazione Rogoredo FS:</em> metropolitana linea M3
 					Gialla (direzione Comasina) per 17 fermate fino a “Affori Centro”.</p>
 				<p><br> 
