--- a/WebContent/it/casa.html
+++ b/WebContent/it/casa.html
@@ -118,7 +118,7 @@
 			<p>Una nuova rinascita nel 2014, con la ristrutturazione
 				dell'intero edificio ad opera di papà Mimmo e dei fratelli, attenti
 				a personalizzare gli spazi e a curare ogni dettaglio. La casa vanta
-				di una sistemazione indipendete e di un grazioso giardino interno,
+				una sistemazione indipendete ed un grazioso giardino interno,
 				dove sarà possibile gustare la colazione nelle mattine estive e
 				godere di fresca tranquillità nei momenti di pausa dalle passeggiate
 				cittadine. Nei mesi invernali la colazione sarà servita nel salone
