--- a/WebContent/en/camere.html
+++ b/WebContent/en/camere.html
@@ -103,10 +103,10 @@
 			<aside>
 				<ul>
 					<li id="room1"><a href="#" class="opengallery"
-						data-gallery-id="5874"><h3>Camera “Duomo”</h3> <img
+						data-gallery-id="5874"><h3>Room “Duomo”</h3> <img
 							src="../media/img/photos/camera_1.jpg" alt="" /></a></li>
 					<li id="room2"><a href="#" class="opengallery"
-						data-gallery-id="5826"><h3>Camera “Castello”</h3> <img
+						data-gallery-id="5826"><h3>Room “Castello”</h3> <img
 							src="../media/img/photos/camera_2.jpg" alt="" /></a></li>
 				</ul>
 			</aside>
