--- a/WebContent/en/camere.html
+++ b/WebContent/en/camere.html
@@ -51,7 +51,7 @@
 
 	<header>
 		<div>
-			<a id="logo" href="index.html">Da Canal - Bed & Breakfast a Milano</a>
+			<a id="logo" href="index.html">Da Canal - Bed & Breakfast in Milan</a>
 
 			<nav id="menu" class="camere">
 				<span class="toggler"><span class="togglerText">menu</span></span>
@@ -70,11 +70,11 @@
 
 			<nav id="lang2">
 				<ul>
-					<li class="it2"><a href="../it/index.html"><span>IT</span></a></li>
-					<li class="en2"><a href="../en/index.html"><span>EN</span></a></li>
-					<li class="de2"><a href="../de/index.html"><span>DE</span></a></li>
-					<li class="fr2"><a href="../fr/index.html"><span>FR</span></a></li>
-					<li class="es2"><a href="../es/casa.html"><span>ES</span></a></li>
+					<li class="it2"><a href="../it/camere.html"><span>IT</span></a></li>
+					<li class="en2"><a href="../en/camere.html"><span>EN</span></a></li>
+					<li class="de2"><a href="../de/camere.html"><span>DE</span></a></li>
+					<li class="fr2"><a href="../fr/camere.html"><span>FR</span></a></li>
+					<li class="es2"><a href="../es/camere.html"><span>ES</span></a></li>
 				</ul>
 			</nav>
 		</div>
