--- a/WebContent/en/casa.html
+++ b/WebContent/en/casa.html
@@ -54,7 +54,7 @@
 
 	<header>
 		<div>
-			<a id="logo" href="index.html">Da Canal - Bed & Breakfast a Milano</a>
+			<a id="logo" href="index.html">Da Canal - Bed & Breakfast in Milan</a>
 
 			<nav id="menu" class="casa">
 				<span class="toggler"><span class="togglerText">menu</span></span>
@@ -73,11 +73,10 @@
 
 			<nav id="lang2">
 				<ul>
-					<li class="it2"><a href="../it/index.html"><span>IT</span></a>
-					</li>
-					<li class="en2"><a href="../en/index.html"><span>EN</span></a></li>
-					<li class="de2"><a href="../de/index.html"><span>DE</span></a></li>
-					<li class="fr2"><a href="../fr/index.html"><span>FR</span></a></li>
+					<li class="it2"><a href="../it/casa.html"><span>IT</span></a></li>
+					<li class="en2"><a href="../en/casa.html"><span>EN</span></a></li>
+					<li class="de2"><a href="../de/casa.html"><span>DE</span></a></li>
+					<li class="fr2"><a href="../fr/casa.html"><span>FR</span></a></li>
 					<li class="es2"><a href="../es/casa.html"><span>ES</span></a></li>
 				</ul>
 			</nav>
