--- a/WebContent/en/servizi.html
+++ b/WebContent/en/servizi.html
@@ -1,9 +1,9 @@
 
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
 <head>
 <!-- [GENERAL] -->
-<title>Servizi - Da Canal - Bed & Breakfast a Milano</title>
+<title>Services - Da Canal - Bed & Breakfast a Milano</title>
 
 <!-- [META TAGS] -->
 <meta charset="utf-8">
@@ -45,11 +45,11 @@
 <meta name="robots" content="all" />
 
 </head>
-<body id="pageServizi" class="it">
+<body id="pageServizi" class="en">
 
 	<header>
 		<div>
-			<a id="logo" href="index.html">Da Canal - Bed & Breakfast a Milano</a>
+			<a id="logo" href="index.html">Da Canal - Bed & Breakfast in Milan</a>
 
 			<nav id="menu" class="servizi">
 				<span class="toggler"><span class="togglerText">menu</span></span>
@@ -85,7 +85,7 @@
 		<section>
 
 			<hgroup>
-				<h1>Per rendere piacevole il vostro soggiorno</h1>
+				<h1>Services for Our Guests</h1>
 			</hgroup>
 
 			<aside id="spazi">
@@ -101,26 +101,15 @@
 			</aside>
 
 			<p>
-				<strong>Servizi offerti</strong>:
+				<strong>Services include:</strong>:
 			</p>
 			<ul id="standard">
-				<li>pulizia giornaliera delle camere</li>
-				<li>biancheria della casa con cambio ogni 3 giorni, quella da bagno ogni giorno se necessario</li>
-				<li>colazione a buffet, servita in giardino durante la bella stagione. Sarà possibile accogliere richieste personalizzate nel caso di
-esigenze particolari</li>
-				<li>wi-fi gratuito, accessibile in tutte le aree della casa</li>
+				<li>daily room cleaning</li>
+				<li>house linen is changed every 3 days</li>
+				<li>breakfast buffet</li>
+				<li>free wi-fi</li>
+				<li>public transport tickets purchase</li>
 				<li>booksharing</li>
-				<li>si parla inglese</li>
-				<li>parcheggio lungo la strada (gratuito dal venerdì alla domenica; nei
-giorni infrasettimanali 0,80euro all'ora dalle 8 alle 13)</li>
-			</ul>
-			<p>
-				<strong>Su richiesta</strong>:
-			</p>
-			<ul id="extra">
-				<li>consigli e prenotazione dei ristoranti di Milano</li>
-				<li>informazioni su Milano e i suoi angoli nascosti</li>
-				<li>si accolgono animali di piccola taglia previo accordi con i proprietari</li>
 			</ul>
 		</section>
 
