--- a/WebContent/it/prezzi.html
+++ b/WebContent/it/prezzi.html
@@ -58,12 +58,11 @@
 
 			<nav id="lang2">
 				<ul>
-					<li class="it2"><a href="../it/index.html"><span>IT</span></a>
-					</li>
-					<li class="en2"><a href="../en/index.html"><span>EN</span></a></li>
-					<li class="de2"><a href="../de/index.html"><span>DE</span></a></li>
-					<li class="fr2"><a href="../fr/index.html"><span>FR</span></a></li>
-					<li class="es2"><a href="../es/casa.html"><span>ES</span></a></li>
+					<li class="it2"><a href="../it/prezzi.html"><span>IT</span></a></li>
+					<li class="en2"><a href="../en/prezzi.html"><span>EN</span></a></li>
+					<li class="de2"><a href="../de/prezzi.html"><span>DE</span></a></li>
+					<li class="fr2"><a href="../fr/prezzi.html"><span>FR</span></a></li>
+					<li class="es2"><a href="../es/prezzi.html"><span>ES</span></a></li>
 				</ul>
 			</nav>
 		</div>
