--- a/WebContent/en/servizi.html
+++ b/WebContent/en/servizi.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 <!-- [GENERAL] -->
-<title>Services - Da Canal - Bed & Breakfast a Milano</title>
+<title>Services - Da Canal - Bed & Breakfast in Milan</title>
 
 <!-- [META TAGS] -->
 <meta charset="utf-8">
