--- a/WebContent/en/gallery.html
+++ b/WebContent/en/gallery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
 <head>
-<title>Immagini - Bed & Breakfast a Milano</title>
+<title>Gallery - Bed & Breakfast in Milan</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <!-- <meta name="viewport" content="width=device-width"> -->
@@ -32,26 +32,23 @@
 
 </script>
 </head>
-<body id="pageGallery" class="it">
+<body id="pageGallery" class="en">
 
 	<header>
 		<div>
 			<a id="logo" href="index.html">Bed <em class="amp">&</em>
-				Breakfast a Milano
+				Breakfast in Milan
 			</a>
 
 			<nav id="menu" class="gallery">
 				<span class="toggler"><span class="togglerText">menu</span></span>
 				<ul>
-					<li class="casa2"><a href="casa.html"><span>la casa</span></a></li>
-					<li class="camere2"><a href="camere.html"><span>le
-								camere</span></a></li>
-					<li class="servizi2"><a href="servizi.html"><span>i
-								servizi</span></a></li>
-					<li class="prezzi2"><a href="prezzi.html"><span>prezzi</span></a></li>
-					<li class="dovesiamo2"><a href="dovesiamo.html"><span>dove
-								siamo</span></a></li>
-					<li class="contatti2"><a href="contatti.html"><span>contatti</span></a></li>
+					<li class="casa2"><a href="casa.html"><span>house</span></a></li>
+					<li class="camere2"><a href="camere.html"><span>rooms</span></a></li>
+					<li class="servizi2"><a href="servizi.html"><span>services</span></a></li>
+					<li class="prezzi2"><a href="prezzi.html"><span>rates</span></a></li>
+					<li class="dovesiamo2"><a href="dovesiamo.html"><span>where we are</span></a></li>
+					<li class="contatti2"><a href="contatti.html"><span>contacts</span></a></li>
 				</ul>
 			</nav>
 
@@ -71,13 +68,13 @@
 		<section>
 
 			<hgroup>
-				<h1>Galleria immagini</h1>
+				<h1>Images gallery</h1>
 			</hgroup>
 
 			<figure id="gallery">
 
 				<h2>
-					<strong>Camera 'Uno'</strong>
+					<strong>Room 'Duomo'</strong>
 				</h2>
 				<img src="../media/img/photos/galleria/small/IMGS5874.jpg"
 					id="photo_id5874" />
@@ -90,7 +87,7 @@
 				<img src="../media/img/photos/galleria/small/IMGS5880.jpg"
 					id="photo_id5880" />
 				<h2>
-					<strong>Camera 'Due'</strong>
+					<strong>Room 'Castello'</strong>
 				</h2>
 				<img src="../media/img/photos/galleria/small/IMGS5826.jpg"
 					id="photo_id5826" />
@@ -102,7 +99,7 @@
 					id="photo_id5883" />
 
 				<h2>
-					<strong>La sala per la colazione</strong>
+					<strong>Breakfast room</strong>
 				</h2>
 				<img src="../media/img/photos/galleria/small/IMGS5887.jpg"
 					id="photo_id5887" />
@@ -118,7 +115,7 @@
 					id="photo_id5910" />
 
 				<h2>
-					<strong>Cortile interno</strong>
+					<strong>Garden</strong>
 				</h2>
 				<img src="../media/img/photos/galleria/small/IMGS5841.jpg"
 					id="photo_id5841" />
@@ -126,7 +123,7 @@
 					id="photo_idIMGS5847" />
 
 				<h2>
-					<strong>Ingresso in via Bernardo da Canal 24</strong>
+					<strong>Entrance in via Bernardo da Canal 24</strong>
 				</h2>
 				<img src="../media/img/photos/galleria/small/IMGS5916.jpg"
 					id="photo_id5916" />
@@ -142,7 +139,7 @@
 		<div><p class="contact">
 				<strong>Da Canal B&amp;B</strong><em> - </em><span>Via Bernardo da
 					Canal, 24 - 20161 Milano (MI) ITALIA</span><br /> <span>Email: <a
-					href="mailto:info@dacanalbnb.com">info@dacanalbnb.com</a></span><em> - </em><span>Cellulare:
+					href="mailto:info@dacanalbnb.com">info@dacanalbnb.com</a></span><em> - </em><span>Phone:
 					<a href="tel:+39.347.0652204">+39.347.0652204</a>
 				</span>
 			</p>
