--- a/WebContent/en/index.html
+++ b/WebContent/en/index.html
@@ -47,7 +47,7 @@
 					<li class="casa2"><a href="casa.html"><span>house</span></a></li>
 					<li class="camere2"><a href="camere.html"><span>rooms</span></a></li>
 					<li class="servizi2"><a href="servizi.html"><span>services</span></a></li>
-					<li class="prezzi2"><a href="prezzi.html"><span>prices</span></a></li>
+					<li class="prezzi2"><a href="prezzi.html"><span>rates</span></a></li>
 					<li class="dovesiamo2"><a href="dovesiamo.html"><span>where we are</span></a></li>
 					<li class="contatti2"><a href="contatti.html"><span>contacts</span></a></li>
 				</ul>		</nav>
