--- a/WebContent/en/servizi.html
+++ b/WebContent/en/servizi.html
@@ -54,15 +54,12 @@
 			<nav id="menu" class="servizi">
 				<span class="toggler"><span class="togglerText">menu</span></span>
 				<ul>
-					<li class="casa2"><a href="casa.html"><span>la casa</span></a></li>
-					<li class="camere2"><a href="camere.html"><span>le
-								camere</span></a></li>
-					<li class="servizi2"><a href="servizi.html"><span>i
-								servizi</span></a></li>
-					<li class="prezzi2"><a href="prezzi.html"><span>prezzi</span></a></li>
-					<li class="dovesiamo2"><a href="dovesiamo.html"><span>dove
-								siamo</span></a></li>
-					<li class="contatti2"><a href="contatti.html"><span>contatti</span></a></li>
+					<li class="casa2"><a href="casa.html"><span>house</span></a></li>
+					<li class="camere2"><a href="camere.html"><span>rooms</span></a></li>
+					<li class="servizi2"><a href="servizi.html"><span>services</span></a></li>
+					<li class="prezzi2"><a href="prezzi.html"><span>rates</span></a></li>
+					<li class="dovesiamo2"><a href="dovesiamo.html"><span>where we are</span></a></li>
+					<li class="contatti2"><a href="contatti.html"><span>contacts</span></a></li>
 				</ul>
 			</nav>
 
@@ -81,23 +78,18 @@
 	</header>
 
 	<article>
-
 		<section>
-
 			<hgroup>
 				<h1>Services for Our Guests</h1>
 			</hgroup>
-
 			<aside id="spazi">
 				<p>
 					<strong>Spazi a disposizione degli ospiti</strong>:
 				</p>
 				<a href="#" class="opengallery" data-gallery-id="IMGS5893"><img
-					src="../media/img/photos/servizi_sala-colazioni.jpg" alt="" /><span>sala
-						colazioni</span></a> <a href="#" class="opengallery"
+					src="../media/img/photos/servizi_sala-colazioni.jpg" alt="" /><span>breakfast room</span></a> <a href="#" class="opengallery"
 					data-gallery-id="IMGS5847"><img
-					src="../media/img/photos/servizi_giardino.jpg" alt="" /><span>giardino
-						interno</span></a>
+					src="../media/img/photos/servizi_giardino.jpg" alt="" /><span>garden</span></a>
 			</aside>
 
 			<p>
@@ -119,7 +111,7 @@
 		<div><p class="contact">
 				<strong>Da Canal B&amp;B</strong><em> - </em><span>Via Bernardo da
 					Canal, 24 - 20161 Milano (MI) ITALIA</span><br /> <span>Email: <a
-					href="mailto:info@dacanalbnb.com">info@dacanalbnb.com</a></span><em> - </em><span>Cellulare:
+					href="mailto:info@dacanalbnb.com">info@dacanalbnb.com</a></span><em> - </em><span>Phone:
 					<a href="tel:+39.347.0652204">+39.347.0652204</a>
 				</span>
 			</p>
