--- a/WebContent/en/casa.html
+++ b/WebContent/en/casa.html
@@ -64,7 +64,7 @@
 					<li class="casa2"><a href="casa.html"><span>house</span></a></li>
 					<li class="camere2"><a href="camere.html"><span>rooms</span></a></li>
 					<li class="servizi2"><a href="servizi.html"><span>services</span></a></li>
-					<li class="prezzi2"><a href="prezzi.html"><span>prices</span></a></li>
+					<li class="prezzi2"><a href="prezzi.html"><span>rates</span></a></li>
 					<li class="dovesiamo2"><a href="dovesiamo.html"><span>where we are</span></a></li>
 					<li class="contatti2"><a href="contatti.html"><span>contacts</span></a></li>
 				</ul>
@@ -147,7 +147,7 @@
 				<strong>Da Canal B&amp;B</strong><em> - </em><span>Via
 					Bernardo da Canal, 24 - 20161 Milano (MI) ITALIA</span><br /> <span>Email:
 					<a href="mailto:info@dacanalbnb.com">info@dacanalbnb.com</a>
-				</span><em> - </em><span>Cellulare: <a href="tel:+39.347.0652204">+39.347.0652204</a>
+				</span><em> - </em><span>Phone: <a href="tel:+39.347.0652204">+39.347.0652204</a>
 				</span>
 			</p>
 			<p class="socials">
