--- a/WebContent/it/index.html
+++ b/WebContent/it/index.html
@@ -77,7 +77,7 @@
 					<li class="en2"><a href="../en/index.html"><span>EN</span></a></li>
 					<li class="de2"><a href="../de/index.html"><span>DE</span></a></li>
 					<li class="fr2"><a href="../fr/index.html"><span>FR</span></a></li>
-					<li class="es2"><a href="../es/casa.html"><span>ES</span></a></li>
+					<li class="es2"><a href="../es/index.html"><span>ES</span></a></li>
 				</ul>
 			</nav>
 		</div>
