--- a/WebContent/en/contatti.html
+++ b/WebContent/en/contatti.html
@@ -85,20 +85,14 @@
 							href="https://www.google.it/maps/place/Via+Privata+Bernardo+da+Canal,+24,+20161+Milano/@45.5141936,9.1710628,17z/data=!3m1!4b1!4m2!3m1!1s0x4786c0eb7f4ac60d:0x48789106df250089">Via
 								Bernardo da Canal, 24<br />20161 Milano (MI) - ITALIA</strong></a></li>
 					<li><span>Email:</span><strong><a
-							href="mailto:info@?????.it">info@dacanalbnb.com</a></strong></li>
+							href="mailto:info@dacanalbnb.com">info@dacanalbnb.com</a></strong></li>
 					<li><span>Phone:</span><strong><a
 							href="tel:+39.347.0652204">+39.347.0652204</a></strong></li>
 
 				</ul>
 			</section>
 
-			<form action="MAILTO:angelo.schiavone@gmail.com" method="post"
-				enctype="text/plain">
-				Namess :<br> <input type="text" name="name" value="your name"><br>
-				E-mail:<br> <input type="text" name="mail" value="your email"><br>
-				Comment:<br> <input type="text" name="comment" value="your comment" size="50"><br>
-				<br> <input type="submit" value="Send"> <input type="reset" value="Reset">
-			</form>
+
 
 		</section>
 	</article>
