--- a/WebContent/en/dovesiamo.html
+++ b/WebContent/en/dovesiamo.html
@@ -111,85 +111,58 @@
 				<br>
 				<p>
 					<b>How to reach us by plane:</b><br>
-					<br> <em>Da Malpensa</em> ci sono tre possibilità:
+					<br> <em>From Malpensa airport</em> there are 2 possibilities:
 				</p>
 				<ol>
-					<li>bus "shuttle" fino alla Stazione Centrale FS e
-						metropolitana linea3Gialla (5 fermate, direzione Comasina),
-						scendere ad Affori Centro.</li>
-					<li>treno Malpensa express fino alla Stazione Cadorna FNM,
-						quindi metropolitana linea1Rossa fino a “Duomo” e infine
-						linea3Gialla in direzione Comasina, scendere ad Affori Centro.</li>
-					<li>treno Malpensa express fino alla Stazione Bovisa FNM,
-						quindi treno linee S2 e S4 del servizio ferroviario suburbano e
-						dalla linea regionale per Asso di Trenord (fermata Stazione FNM
-						Affori).</li>
+					<li>take shuttle bus to Milan Central Station (Stazione Centrale FS) then
+						subay linea 3 (the yellow one) 5 stops in Comasina direction,
+						get off at Affori Centro station.</li>
+					<li>Malpensa express train to "Stazione Cadorna FNM",
+						then subway line 1 (the red one) to “Duomo” where you will change 
+						to line 3 (the yellow one) 5 stops in Comasina direction,
+						get off at Affori Centro station.</li>
 				</ol>
 				<br>
 				<p>
-					<em>Da Linate</em> ci sono due possibilità:<br>
+					<em>From Linate airport</em> there are 2 possibilities:<br>
 				</p>
 				<ol>
-					<li>bus "shuttle" fino alla Stazione Centrale FS e
-						metropolitana linea M3 Gialla (5 fermate, direzione Comasina),
-						scendere ad Affori Centro.</li>
-					<li>autobus 73 fino al capolinea “San Babila” e poi (sempre
-						che non si preferisca passeggiare lungo il corso Vittorio
-						Emanuele!), metropolitana linea1Rossa fino a “Duomo” e infine
-						linea3Gialla in direzione Comasina, fermata Affori Centro.</li>
+					<li>take shuttle bus to Milan Central Station (Stazione Centrale FS) then
+						subay linea 3 (the yellow one) 5 stops in Comasina direction,
+						get off at Affori Centro station.</li>
+					<li>take urban bus number 73 or 73x to the last stop “San Babila” then subway 
+						line 1 (the red one) to “Duomo” where you will change 
+						to line 3 (the yellow one) 5 stops in Comasina direction,
+						get off at Affori Centro station.</li>
 				</ol>
 
 				<br>
 				<p>
-					<em>Da Orio al Serio (BG): </em> bus "shuttle" fino alla Stazione
-					Centrale FS e metropolitana linea3Gialla (5 fermate, direzione
-					Comasina), scendere a Affori Centro.<br>
+					<em>From Orio al Serio airport: </em>take shuttle bus to Milan Central Station (Stazione Centrale FS) then
+						subay linea 3 (the yellow one) 5 stops in Comasina direction,
+						get off at Affori Centro station.<br>
 				</p>
 				<p>
-					<br><b>Come raggiungerci in Treno:</b>
- <br><br>	
-					 <em>Da stazione Centrale Milano: </em> metropolitana
-					linea M3 Gialla fermata “Affori Centro” (5 fermate, direzione
-					Comasina)<br></p>
-<p>					<br> <em>Da stazione Porta Garibaldi</em> ci sono due
-					possibilità:</p>
-					<ol><li> metropolitana linea2Verde fino a “Centrale
-					FS” (2 fermate, direzione Cologno) e poi linea M3 Gialla fermata
-					“Affori Centro” (5 fermate, direzione Comasina) </li><li> autobus
-					n° 70 (fermata in Via Farini – Via Ferrari, direzione Biancamano –
-					Cim. Bruzzano) per 10 fermate e scendi alla fermata di Via P. Rossi
-					– Via Armellini (200mt a piedi dal B&amp;B da Canal) </li>
+					<br><b>How to get here by train:</b>
+ 					<br><br>	
+					 <em>From Milan Central Station (Stazione Centrale FS): </em> 
+					take subay line 3 (the yellow one) 5 stops in Comasina direction,
+					get off at Affori Centro station.<br></p>
+<p>					<br> <em>From Porta Garibaldi station</em> there are 2 possibilities:</p>
+					<ol><li> take subway line 2 (the green one) to “Stazione Centrale
+					FS” (2 stops, direction "Cologno") then change to
+					subay line 3 (the yellow one) 5 stops in Comasina direction, get off at Affori Centro station. </li>
+					<li> bus n° 70 (take it in Via Farini – Via Ferrari) to Biancamano –
+					Cim. Bruzzano) 10 stops, get off at Via P. Rossi
+					– Via Armellini (200mt from Da Canal B&amp;B) </li>
 					</ol><br> 
-					<p><em>Da stazione FNM Cadorna</em> ci sono due possibilità:</p>
-					<ol><li> metropolitana linea1Rossa fino a “Duomo” (3 fermate, direzione
-					Sesto) e poi linea M3 Gialla fermata “Affori Centro” (9 fermate,
-					direzione Comasina)</li> <li>  linee S2 e S4 del servizio ferroviario
-					suburbano e dalla linea regionale per Asso di Trenord fermata
-					“Stazione FNM Affori”.</li></ol><br>
-					<p> <em>Da stazione Rogoredo FS:</em> metropolitana linea M3
-					Gialla (direzione Comasina) per 17 fermate fino a “Affori Centro”.</p>
-				<p><br> 
-					<b>Come raggiungerci in Auto:</b> Siamo al di fuori dell’Area C, la
-					zona a traffico limitato (ZTL) corrispondente alla Cerchia dei
-					Bastioni (circonvallazione interna) per la quale è previsto un
-					ticket di ingresso.
-					<br><br> <em>da Venezia:</em> imbocca l’autostrada A4 direzione
-					Milano, superata la barriera di Milano est e prosegui sino
-					all’uscita di Cormano. - da Genova: percorri l’autostrada A7
-					direzione Milano, giunto alla barriera di Milano ovest prosegui in
-					direzione Tangenziale ovest – Torino, arrivato al bivio segui la
-					direzione Venezia sino all’uscita di Cormano. - 
-					<br><br> <em>da Bologna:</em>
-					risalendo l’autostrada A1 direzione Milano arrivi alla barriera di
-					Milano sud, prosegui in Tangenziale est direzione Venezia, superata
-					l’uscita di Cascina Gobba imbocca sulla destra la Tangenziale A52
-					direzione Torino – Como. Oltrepassato il casello immettersi sulla
-					destra sempre in direzione Torino e prosegui sino all’uscita
-					Cormano. 
-					<br><br> <em>da Aeroporto Milano “Malpensa”:</em> prendi la A8 con
-					direzione Milano e successivamente la A4 direzione Venezia, uscendo
-					allo svincolo di Cormano.
-				</p>
+					<p><em>From Cadorna Station FNM</em> there are 2 possibilities:</p>
+					<ol><li> subway line 1 (the red one) to “Duomo” where you will change 
+						to line 3 (the yellow one), 5 stops in Comasina direction,
+						get off at Affori Centro station.</li>
+					<li> Take suburban train "Trenord" line S2 or S4 get off at “Stazione FNM Affori”.</li></ol><br>
+					<p> <em>From Rogoredo FS station:</em> take line 3 (the yellow one), Comasina direction,
+						get off at Affori Centro station.</p>
 			</section>
 
 			<div id="gwrap">
