--- a/WebContent/en/casa.html
+++ b/WebContent/en/casa.html
@@ -135,8 +135,8 @@
 
 			<p>Da Canal B&B is also a great starting point to reach Como and
 				the northern lakes, in fact we are just a few steps from FNM railway
-				station, from where regional trains depart. We are also closed to
-				"Isola" district with its bars and restaurants and the new "Porta
+				station, from where regional trains depart. We are also near "Isola" 
+				district with its bars and restaurants and the new "Porta
 				Nuova" district, with its modern buildings.</p>
 
 		</section>
