--- a/WebContent/en/camere.html
+++ b/WebContent/en/camere.html
@@ -102,49 +102,55 @@
 			<figure id="gallery">
 				<a href="../media/img/photos/galleria/IMGS5874.jpg"
 					data-milkslide="galleria" data-gallery-id="5874"
-					title="Camera 'Uno'"></a>
+					title="Room 'Duomo'"></a>
 				<a href="../media/img/photos/galleria/IMGS5875.jpg"
 					data-milkslide="galleria" data-gallery-id="5875"
-					title="Camera 'Uno'"></a>
+					title="Room 'Duomo'"></a>
 				<a href="../media/img/photos/galleria/IMGS5876.jpg"
 					data-milkslide="galleria" data-gallery-id="5876"
-					title="Camera 'Uno'"></a>
+					title="Room 'Duomo'"></a>
 				<a href="../media/img/photos/galleria/IMGS5877.jpg"
 					data-milkslide="galleria" data-gallery-id="5877"
-					title="Camera 'Uno'"></a>
+					title="Room 'Duomo'"></a>
 				<a href="../media/img/photos/galleria/IMGS5878.jpg"
 					data-milkslide="galleria" data-gallery-id="5878"
-					title="Camera 'Uno'"></a>
+					title="Room 'Duomo'"></a>
 				<a href="../media/img/photos/galleria/IMGS5880.jpg"
 					data-milkslide="galleria" data-gallery-id="5880"
-					title="Camera 'Uno'"></a>
+					title="Room 'Duomo'"></a>
 				<a href="../media/img/photos/galleria/IMGS5934.jpg"
 					data-milkslide="galleria" data-gallery-id="5934"
-					title="Camera 'Uno'"></a>
+					title="Room 'Duomo'"></a>
 				<a href="../media/img/photos/galleria/IMGS5935.jpg"
 					data-milkslide="galleria" data-gallery-id="5935"
-					title="Camera 'Uno'"></a>
-				<a href="../media/img/photos/galleria/IMGS5937.jpg"
-					data-milkslide="galleria" data-gallery-id="5937"
-					title="Camera 'Uno'"></a>
+					title="Room 'Duomo'"></a>
 				<a href="../media/img/photos/galleria/IMGS6177.jpg"
 					data-milkslide="galleria" data-gallery-id="6177"
-					title="Camera 'Uno'"></a>
+					title="Room 'Duomo'"></a>
 				<a href="../media/img/photos/galleria/IMGS5826.jpg"
 					data-milkslide="galleria" data-gallery-id="5826"
-					title="Camera 'Due'"></a>
+					title="Room 'Castello'"></a>
 				<a href="../media/img/photos/galleria/IMGS5832.jpg"
 					data-milkslide="galleria" data-gallery-id="5832"
-					title="Camera 'Due'"></a>
+					title="Room 'Castello'"></a>
 				<a href="../media/img/photos/galleria/IMGS5834.jpg"
 					data-milkslide="galleria" data-gallery-id="5834"
-					title="Camera 'Due'"></a>
+					title="Room 'Castello'"></a>
 				<a href="../media/img/photos/galleria/IMGS5881.jpg"
 					data-milkslide="galleria" data-gallery-id="5881"
-					title="Camera 'Due'"></a>
+					title="Room 'Castello'"></a>
 				<a href="../media/img/photos/galleria/IMGS5883.jpg"
 					data-milkslide="galleria" data-gallery-id="5883"
-					title="Camera 'Due'"></a>
+					title="Room 'Castello'"></a>
+
+				<a href="../media/img/photos/galleria/IMGS1504.jpg"
+					data-milkslide="galleria" data-gallery-id="1504"
+					title="Room 'Castello'"></a>					
+				<a href="../media/img/photos/galleria/IMGS1505.jpg"
+					data-milkslide="galleria" data-gallery-id="1505"
+					title="Room 'Castello'"></a>
+
+					
 			</figure>
 			<p>Room "Duomo" (19 sqm) The two large windows that characterize the room "Duomo" make it very bright. The bathroom is located inside the room</p>
 
