--- a/WebContent/it/casa.html
+++ b/WebContent/it/casa.html
@@ -73,8 +73,7 @@
 
 			<nav id="lang2">
 				<ul>
-					<li class="it2"><a href="../it/casa.html"><span>IT</span></a>
-					</li>
+					<li class="it2"><a href="../it/casa.html"><span>IT</span></a></li>
 					<li class="en2"><a href="../en/casa.html"><span>EN</span></a></li>
 					<li class="de2"><a href="../de/casa.html"><span>DE</span></a></li>
 					<li class="fr2"><a href="../fr/casa.html"><span>FR</span></a></li>
