--- a/WebContent/en/servizi.html
+++ b/WebContent/en/servizi.html
@@ -127,6 +127,11 @@
 		<a href="../media/img/photos/galleria/IMGS5893.jpg"
 			data-milkslide="galleria" data-gallery-id="IMGS5893"
 			title="La sala colazione."></a>
+
+		<a href="../media/img/photos/galleria/IMGS1496.jpg"
+			data-milkslide="galleria" data-gallery-id="IMGS1496"
+			title="La sala colazione."></a>
+			
 		<a href="../media/img/photos/galleria/IMGS5892.jpg"
 			data-milkslide="galleria" data-gallery-id="IMGS5892"
 			title="La sala colazione."></a>
