language en it only

--- a/WebContent/it/camere.html
+++ b/WebContent/it/camere.html
@@ -72,9 +72,9 @@
 				<ul>
 					<li class="it2"><a href="../it/camere.html"><span>IT</span></a></li>
 					<li class="en2"><a href="../en/camere.html"><span>EN</span></a></li>
-					<li class="de2"><a href="../de/camere.html"><span>DE</span></a></li>
-					<li class="fr2"><a href="../fr/camere.html"><span>FR</span></a></li>
-					<li class="es2"><a href="../es/camere.html"><span>ES</span></a></li>
+<!-- 					<li class="de2"><a href="../de/camere.html"><span>DE</span></a></li> -->
+<!-- 					<li class="fr2"><a href="../fr/camere.html"><span>FR</span></a></li> -->
+<!-- 					<li class="es2"><a href="../es/camere.html"><span>ES</span></a></li> -->
 				</ul>
 			</nav>
 		</div>
