--- a/WebContent/it/index.html
+++ b/WebContent/it/index.html
@@ -72,12 +72,9 @@
 
 			<nav id="lang2">
 				<ul>
-					<li class="it2"><a href="../it/index.html"><span>IT</span></a>
-					</li>
+					<li class="it2"><a href="../it/index.html"><span>IT</span></a></li>
 					<li class="en2"><a href="../en/index.html"><span>EN</span></a></li>
-					<li class="de2"><a href="../de/index.html"><span>DE</span></a></li>
-					<li class="fr2"><a href="../fr/index.html"><span>FR</span></a></li>
-					<li class="es2"><a href="../es/index.html"><span>ES</span></a></li>
+
 				</ul>
 			</nav>
 		</div>
