--- a/WebContent/en/servizi.html
+++ b/WebContent/en/servizi.html
@@ -67,9 +67,7 @@
 				<ul>
 					<li class="it2"><a href="../it/servizi.html"><span>IT</span></a></li>
 					<li class="en2"><a href="../en/servizi.html"><span>EN</span></a></li>
-					<li class="de2"><a href="../de/servizi.html"><span>DE</span></a></li>
-					<li class="fr2"><a href="../fr/servizi.html"><span>FR</span></a></li>
-					<li class="es2"><a href="../es/servizi.html"><span>ES</span></a></li>
+
 				</ul>
 			</nav>
 		</div>
@@ -126,42 +124,42 @@
 	<figure id="gallery">
 		<a href="../media/img/photos/galleria/IMGS5893.jpg"
 			data-milkslide="galleria" data-gallery-id="IMGS5893"
-			title="La sala colazione."></a>
+			title="Breakfast room."></a>
 
 		<a href="../media/img/photos/galleria/IMGS1496.jpg"
 			data-milkslide="galleria" data-gallery-id="IMGS1496"
-			title="La sala colazione."></a>
+			title="Breakfast room."></a>
 			
 		<a href="../media/img/photos/galleria/IMGS5892.jpg"
 			data-milkslide="galleria" data-gallery-id="IMGS5892"
-			title="La sala colazione."></a>
+			title="Breakfast room."></a>
 		<a href="../media/img/photos/galleria/IMGS5897.jpg"
 			data-milkslide="galleria" data-gallery-id="IMGS5897"
-			title="La sala colazione."></a>
+			title="Breakfast room."></a>
 		<a href="../media/img/photos/galleria/.jpg" data-milkslide="galleria"
-			data-gallery-id="" title="La sala colazione."></a>
+			data-gallery-id="" title="Breakfast room."></a>
 		<a href="../media/img/photos/galleria/IMGS5900.jpg"
 			data-milkslide="galleria" data-gallery-id="IMGS5900"
-			title="La sala colazione."></a>
+			title="Breakfast room."></a>
 		<a href="../media/img/photos/galleria/IMGS5903.jpg"
 			data-milkslide="galleria" data-gallery-id="IMGS5903"
-			title="La sala colazione."></a>
+			title="Breakfast room."></a>
 		<a href="../media/img/photos/galleria/IMGS5904.jpg"
 			data-milkslide="galleria" data-gallery-id="IMGS5904"
-			title="La sala colazione."></a>
+			title="Breakfast room."></a>
 		<a href="../media/img/photos/galleria/IMGS5887.jpg"
 			data-milkslide="galleria" data-gallery-id="IMGS5887"
-			title="La sala colazione."></a>
+			title="Breakfast room."></a>
 		<a href="../media/img/photos/galleria/IMGS5910.jpg"
 			data-milkslide="galleria" data-gallery-id="IMGS5910"
-			title="La sala colazione."></a>
+			title="Breakfast room."></a>
 
 		<a href="../media/img/photos/galleria/IMGS5847.jpg"
 			data-milkslide="galleria" data-gallery-id="IMGS5847"
-			title="Il giardino interno."></a>
+			title="Garden"></a>
 		<a href="../media/img/photos/galleria/IMGS5841.jpg"
 			data-milkslide="galleria" data-gallery-id="IMGS5841"
-			title="Il giardino interno."></a>
+			title="Garden"></a>
 	</figure>
 
 </body>
