--- a/WebContent/en/camere.html
+++ b/WebContent/en/camere.html
@@ -161,7 +161,7 @@ Room "Castle" (14 sqm bathroom excluded) The room "Castle" window shows the pret
 		<div><p class="contact">
 				<strong>Da Canal B&amp;B</strong><em> - </em><span>Via Bernardo da
 					Canal, 24 - 20161 Milano (MI) ITALIA</span><br /> <span>Email: <a
-					href="mailto:info@dacanalbnb.com">info@dacanalbnb.com</a></span><em> - </em><span>Phone:
+					href="mailto:dacanalmilano@gmail.com">dacanalmilano@gmail.com</a></span><em> - </em><span>Phone:
 					<a href="tel:+39.347.0652204">+39.347.0652204</a>
 				</span>
 			</p>
