--- a/WebContent/it/contatti.html
+++ b/WebContent/it/contatti.html
@@ -103,7 +103,7 @@
 			<p class="contact">
 				<strong>Da Canal B&amp;B</strong><em> - </em><span>Via
 					Bernardo da Canal, 24 - 20161 Milano (MI) ITALIA</span><br /> <span>Email:
-					<a href="mailto:info@dacanalbnb.com">info@dacanalbnb.com</a>
+					<a href="mailto:dacanalmilano@gmail.com">dacanalmilano@gmail.com</a>
 				</span><em> - </em><span>Cellulare: <a href="tel:+39.347.0652204">+39.347.0652204</a>
 				</span>
 			</p>
