--- a/WebContent/it/servizi.html
+++ b/WebContent/it/servizi.html
@@ -128,7 +128,7 @@ giorni infrasettimanali 0,80euro all'ora dalle 8 alle 13)</li>
 		<div><p class="contact">
 				<strong>Da Canal B&amp;B</strong><em> - </em><span>Via Bernardo da
 					Canal, 24 - 20161 Milano (MI) ITALIA</span><br /> <span>Email: <a
-					href="mailto:info@dacanalbnb.com">info@dacanalbnb.com</a></span><em> - </em><span>Cellulare:
+					href="mailto:dacanalmilano@gmail.com">dacanalmilano@gmail.com</a></span><em> - </em><span>Cellulare:
 					<a href="tel:+39.347.0652204">+39.347.0652204</a>
 				</span>
 			</p>
